# waycrust

./: Cargo.toml  config.ron
src/: comp_utils.rs  compositor.rs  config.rs  lib.rs  main.rs  render.rs  socket.rs  winit.rs  xdg.rs
src/handlers/: actions.rs  mod.rs  window.rs
src/handlers/input/: keybinds.rs  keyboard.rs  mod.rs  pointer.rs
