[package]
name = "waycrust"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay = {git = "https://github.com/Smithay/smithay.git", rev = "61f5a0ddb8c4b1ed3103a33e580d059cdd44fa60", features = ["backend_winit", "renderer_gl", "wayland_frontend"] }
tracing = { version = "0.1.43", features = ["release_max_level_debug", "max_level_trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wayland-protocols = "0.32.9"
wayland-server = "0.31.10"
winit = "0.30.12"
xkbcommon = "0.9.0"
